--- a/templates/images.html
+++ b/templates/images.html
@@ -3,12 +3,38 @@
 <body>
     <h1>Blooware Trial</h1>
     <h4><a href="/">Return to upload</a></h4>
-    <hr>
-    <p>Here are the previously uploaded images.</p>
     {% for mesg in get_flashed_messages() %}
-      <h3 style="color:blue;">{{ mesg }}</h3>
-      {% endfor %}
 
+      <div style="margin:15px;padding:5px;background-color: #aaa;">
+        <h3 style="color:blue;"><span style="color:darkgreen;">Upload Successful:</span> Your image is located at {{ mesg }}</h3>
+
+        <figure style="padding:15px;background-color: #777;">
+          <img style="display:block;margin-left:auto;margin-right:auto;" src="{{url_for('static', filename='images/modified/'+mesg)}}" alt="{{mesg}}">
+          <figcaption style="text-align: center; padding-top:10px;">Your Uploaded Modified Image</figcaption>
+        </figure>
+
+      </div>
+    {% endfor %}
+
+    <hr>
+    <p>Here are the previously uploaded images. (Sorted alphabetically)</p>
+
+    {% for image in modified_images %}
+    <div style="margin:25px;padding:5px;background-color: #aaa;">
+      <p>File Name: {{image}}</p>
+      <figure style="padding:15px;background-color: #777;">
+        <img style="display:block;margin-left:auto;margin-right:auto;" src="{{url_for('static', filename='images/original/'+image)}}" alt="{{image}}">
+        <figcaption style="text-align: center; padding-top:10px;">Original Image</figcaption>
+      </figure>
+      <figure style="padding:15px;background-color: #777;">
+        <img style="display:block;margin-left:auto;margin-right:auto;" src="{{url_for('static', filename='images/modified/'+image)}}" alt="{{image}}">
+        <figcaption style="text-align: center; padding-top:10px;">Modified Image</figcaption>
+      </figure>
+
+    </div>
+
+
+    {% endfor %}
 </body>
 
 </html>
